--- a/vscode-settings/settings.json
+++ b/vscode-settings/settings.json
@@ -38,8 +38,8 @@
     "editor.fontFamily": "Hasklug Nerd Font",
     "editor.fontLigatures": true,
     "editor.fontWeight": 400,
-    "editor.fontSize": 15,
-    "editor.lineHeight": 22,
+    "editor.fontSize": 13,
+    "editor.lineHeight": 21,
     "editor.rulers": [120],
 
     /** Editor Scroll */
@@ -87,9 +87,9 @@
     "editor.linkedEditing": true,
 
     /** Editor Inline Hints */
-    "editor.inlayHints.enabled": "off",
-    "editor.inlayHints.fontFamily": "iosevka custom",
-    "editor.inlayHints.fontSize": 12,
+    "editor.inlayHints.enabled": "on",
+    "editor.inlayHints.fontFamily": "Hasklug Nerd Font",
+    "editor.inlayHints.fontSize": 13,
 
     /** Editor */
     "editor.experimental.asyncTokenization": true,
@@ -108,14 +108,14 @@
     "editor.minimap.showSlider": "always",
     "editor.tabSize": 4,
     "editor.renderWhitespace": "trailing",
-    "editor.lightbulb.enabled": false,
+    "editor.lightbulb.enabled": "off",
 
     /** Language General */
     "workbench.editor.languageDetection": false,
     "editor.autoSurround": "languageDefined",
 
     /** Scm */
-    "scm.diffDecorations": "overview",
+    "scm.diffDecorations": "all",
 
     /** Explorer Controls */
     "explorer.confirmDragAndDrop": false,
@@ -179,7 +179,7 @@
 
     /** Terminal */
     "terminal.integrated.smoothScrolling": true,
-    "terminal.integrated.enableMultiLinePasteWarning": false,
+    "terminal.integrated.enableMultiLinePasteWarning": "never",
     "terminal.integrated.scrollback": 10000,
 
     /** Breadcrumbs */
@@ -211,5 +211,6 @@
 
     /** Miscellaneous */
     "redhat.telemetry.enabled": false,
-    "vsicons.dontShowNewVersionMessage": true
+    "vsicons.dontShowNewVersionMessage": true,
+    "git.openRepositoryInParentFolders": "never"
 }
